--- a/apps/loki.yaml
+++ b/apps/loki.yaml
@@ -10,7 +10,17 @@ spec:
   project: default
   source:
     chart: loki-stack
+    helm:
+      parameters:
+        - name: grafana.enabled
+          value: 'false'
+        - name: loki.queryScheduler.maxOutstandingRequestsPerTenant 
+          value: '10000'
+        - name: loki.limitsConfig.retentionPeriod
+          value: '720h'
     repoURL: https://grafana.github.io/helm-charts
     targetRevision: 2.10.2
   syncPolicy:
     automated: {}
+    syncOptions:
+    - Validate=false
