Update from https://github.com/ussnorma/Project-1/commit/586fdaec153ad91ccc649038fd66979591d9109c

--- a/apps/wordpress-app-pre.yaml
+++ b/apps/wordpress-app-pre.yaml
@@ -9,8 +9,8 @@ spec:
     server: https://kubernetes.default.svc
   project: default
   source:
-    chart: wordpress-helm
-    repoURL: https://ussnorma.github.io/helm-releases/
+    chart: wordpress
+    repoURL: https://ussnorma.github.io/helm/
     targetRevision: $WVER
   syncPolicy:
     automated:
