Update from https://github.com/ussnorma/Project-1/commit/1e0005425575dd4225dcfff060accc859732a50e

--- a/apps/wordpress-app-pre.yaml
+++ b/apps/wordpress-app-pre.yaml
@@ -11,7 +11,7 @@ spec:
   source:
     chart: wordpress
     repoURL: https://ussnorma.github.io/helm/
-    targetRevision: $WVER
+    targetRevision: 20.1.2
   syncPolicy:
     automated:
       prune: true
