--- a/apps/wordpress-app-main.yaml
+++ b/apps/wordpress-app-main.yaml
@@ -7,7 +7,7 @@ metadata:
     notifications.argoproj.io/subscribe.on-deployed.slack: devops-project
 spec:
   destination:
-    namespace: pre-prod
+    namespace: prod
     server: https://kubernetes.default.svc
   project: default
   source:
