--- a/apps/wordpress-app-main.yaml
+++ b/apps/wordpress-app-main.yaml
@@ -1,13 +1,13 @@
 apiVersion: argoproj.io/v1alpha1
 kind: Application
 metadata:
-  name: wordpress-pre
+  name: wordpress-main
   namespace: argocd
   annotations:
     notifications.argoproj.io/subscribe.on-deployed.slack: devops-project
 spec:
   destination:
-    namespace: pre-prod
+    namespace: prod
     server: https://kubernetes.default.svc
   project: default
   source:
