--- a/apps/wordpress-app-pre.yaml
+++ b/apps/wordpress-app-pre.yaml
@@ -15,9 +15,9 @@ spec:
     helm:
       parameters:
       - name: ingress.hostname
-        value: wordpress-pre.k8s-9.sa
+        value: wordpress-fail.k8s-9.sa
     repoURL: https://ussnorma.github.io/helm/
-    targetRevision: 20.1.12
+    targetRevision: 20.1.13
   syncPolicy:
     automated:
       prune: true
