Update from https://github.com/ussnorma/DevOps-Project-1/commit/47c9c0835eb8d9621a7ca0c429d70eea637984c2

--- a/apps/wordpress-app-pre.yaml
+++ b/apps/wordpress-app-pre.yaml
@@ -15,9 +15,9 @@ spec:
     helm:
       parameters:
       - name: ingress.hostname
-        value: wordpress-fail.k8s-9.sa
+        value: wordpress-pre.k8s-9.sa
     repoURL: https://ussnorma.github.io/helm/
-    targetRevision: 20.1.13
+    targetRevision: 20.1.14
   syncPolicy:
     automated:
       prune: true
